# BC-Server-Rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.bat
src/: config.rs  handlers.rs  main.rs  socket_util.rs
src/account/: mod.rs
src/auth/: create.rs  login.rs  mod.rs  password.rs  reset.rs
src/chat/: mod.rs
src/db/: mod.rs  mongo.rs  sqlite.rs
src/limits/: mod.rs
src/mail/: mod.rs
src/protocol/: mod.rs
src/relations/: mod.rs
src/room/: admin.rs  mod.rs
src/state/: account.rs  chatroom.rs  mod.rs  world.rs
src/util/: json_path.rs  mod.rs  time.rs  validate.rs
